# docker-learning

./: README.md
pipeline/: Dockerfile  pipeline.py
postgres/: README.md  ingest_data.py  notebook.ipynb  pyproject.toml
test/: script.py
